# oanda-v20-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  gen.sh  openapi.yaml
oanda-v20-gen/: .openapi-generator-ignore  Cargo.toml
oanda-v20-gen/.openapi-generator/: FILES
oanda-v20-gen/src/apis/: account_api.rs  configuration.rs  instrument_api.rs  mod.rs  order_api.rs  position_api.rs  pricing_api.rs  trade_api.rs  transaction_api.rs
oanda-v20-gen/src/models/: account.rs  account_changes.rs  account_changes_response.rs  account_changes_state.rs  account_configuration_bad_request_response.rs  account_configuration_forbidden_response.rs  account_configuration_request.rs  account_configuration_response.rs  account_currency.rs  account_guaranteed_stop_loss_order_mode.rs  account_instruments_response.rs  account_properties.rs  account_response.rs  account_state.rs  account_summary.rs  account_summary_response.rs  accounts_response.rs  calculated_position_state.rs  calculated_trade_state.rs  cancel_order_404_response.rs  cancel_order_response.rs  candles_response.rs  candlestick.rs  candlestick_data.rs  candlestick_granularity.rs  client_configure.rs  client_configure_reject_transaction.rs  client_configure_transaction.rs  client_extensions.rs  client_price.rs  close_position_bad_request_response.rs  close_position_not_found_response.rs  close_position_request.rs  close_position_response.rs  close_trade_bad_request_response.rs  close_trade_not_found_response.rs  close_trade_request.rs  close_trade_response.rs  create_order_bad_request_response.rs  create_order_not_found_response.rs  (+113 more)
src/: lib.rs  main.rs
tests/: account_api_integration.rs  instrument_api.rs
