[package]
name = "oanda-v20-rs"
version = "0.0.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/jxcv0/oanda-v20-rs.git"
description = "A Rust client for the OANDA v20 REST and Streaming APIs. The aim is a small, composable core you can plug into your own trading stack."

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
wiremock = "0.6.5"
