[package]
name = "oanda-v20-rs"
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jxcv0/oanda-v20-rs.git"
description = "A Rust client for the OANDA v20 REST and Streaming APIs. The aim is a small, composable core you can plug into your own trading stack."

[dependencies]
oanda-v20-gen = { path = "./oanda-v20-gen" }

[dev-dependencies]
wiremock = "0.6.5"
serde_json = "1.0.143"
tokio = "1.47.1"
