[package]
name = "oanda-v20-rs"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/jxcv0/oanda-v20-rs.git"
description = "A Rust client for the OANDA v20 REST and Streaming APIs"

[dependencies]
oanda-v20-openapi = "0.1.0"

[dev-dependencies]
wiremock = "0.6.5"
serde_json = "1.0.143"
tokio = "1.47.1"
